--- a/demo-repo1/index.html
+++ b/demo-repo1/index.html
@@ -8,5 +8,15 @@
 <body>
     <h1>Git demo</h1>
     <p>A  paragraph</p>
+    <table>
+        <tr>
+            <td>Name</td>
+            <td>Roll No.</td>
+        </tr>
+        <tr>
+            <td>Prashant</td>
+            <td>28</td>
+        </tr>
+    </table>
 </body>
 </html>
