Update index.html paragraph

--- a/demo-repo1/index.html
+++ b/demo-repo1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Git demo</h1>
-    <p>A  paragraph</p>
+    <p>THis paragraph is an improvement in this code</p>
     <table>
         <tr>
             <td>Name</td>
